# lsforms

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  config.toml.sample  hosts.json.sample
.gitea/workflows/: release.yml
assets/: form-response.js  test-form.html  wordpress.css
emails/tu/: donation-campaign.txt  donation.txt  membership-renew.txt  membership.txt
emails/vous/: donation-campaign.txt  donation.txt  membership-renew.txt  membership.txt
mails/: en.txt  fr.txt
migrations/postgres/20231030123456_create_db/: up.sql
migrations/sqlite/20231005123456_create_db/: up.sql
src/: emails.rs  errors.rs  handlers.rs  main.rs  templates.rs  webmodels.rs
src/config/: global.rs  methods.rs  mod.rs  structs.rs
src/db/: generic.rs  methods.rs  mod.rs  models.rs  schema.rs  structs.rs
src/handlers/: callbacks.rs  mod.rs  stars.rs  transactions.rs
static/: admin.html  index.html
static/admin/: index.html
static/assets/: admin.css  admin.js  global.js  index.css  index.js
static/data/: stars.json
templates/: form.html
