[package]
name = "constello"
version = "1.0.1"
edition = "2021"

[features]
default = [ "postgres" ]
postgres = [ "diesel/postgres", "diesel_migrations/postgres" ]
# compile with cargo build --no-default-features --features sqlite for SQLite support
sqlite = [ "diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel_migrations/sqlite", "dep:libsqlite3-sys" ]

[dependencies]
actix-web = { version = "4.9", default-features = false, features = ["macros"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", default-features = false, features = ["r2d2", "chrono"] }
diesel_migrations = { version = "2.2", default-features = false }
once_cell = "1.19"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"], default-features = false }
rand = "0.8"
lettre = "0.11"
libsqlite3-sys = { version = ">=0.17.2, <=0.30.1", features = ["bundled_bindings", "bundled"], optional = true }
