[package]
name = "electre"
version = "1.0.0-dev"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", default-features = false, features = ["macros"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"], default-features = false }
rand = "0.8"
