[package]
name = "lsforms"
version = "1.1.1"
edition = "2021"

[features]
default = [ "static-files" ]
templates = [ "askama" ]
static-files = [ "actix-files" ]

[dependencies]
actix-web = { version = "4.10", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
toml = { version = "0.8", default-features = false, features = [ "parse" ] }
lettre = { version = "0.11", features = [ "tokio1-native-tls" ] }
chrono = { version = "0.4", default-features = false }
base64 = "0.22"
regex = { version = "1.11", default-features = false }
# temporary until https://github.com/jmic/altcha-lib-rs/pull/1 is merged
altcha-lib-rs = { git = "https://github.com/guscalonico/altcha-lib-rs", branch = "fix/rand-version", features = ["json"] }
askama = { version = "0.12.1", optional = true }
actix-files = { version = "0.6", optional = true }
